@@ -145,6 +145,7 @@ contrib/startup/redhat/nxagentd -text
 doc/Makefile.am -text
 doc/internal/Makefile.am -text
 doc/internal/db_format_change.txt -text
+doc/internal/event_code_ranges.txt -text
 doc/internal/internals.rtf -text
 doc/internal/ipso.txt -text
 doc/internal/layer2-topology.txt -text
