@@ -1,0 +1,5 @@
+0 - 499		System events
+500 - 510	Well-known SNMP traps
+4000 - 4999	Predefined threshold violation events
+90000 - 90999	Agilis monitoring subagent
+100000 - ...	User-defined events
